# gr4_modtool

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  smoke_test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
docs/: configuration.md  contributing.md  getting-started.md  index.md  installation.md  migrate_plan.md  plugins.md
docs/commands/: blocks.md  building.md  devenv.md  ecosystem.md  index.md  project.md  quality.md  scaffolding.md  testing.md  tui.md
examples/gr4_modtool_example_plugin/: README.md  pyproject.toml
examples/gr4_modtool_example_plugin/gr4_modtool_example_plugin/: __init__.py
examples/gr4_modtool_example_plugin/gr4_modtool_example_plugin/commands/: report.py
examples/gr4_modtool_example_plugin/gr4_modtool_example_plugin/templates/: __init__.py  qa_block.cpp.j2
gr4_modtool/: __init__.py  api.py  cli.py  plugins.py  templates.py
gr4_modtool/commands/: add_dep.py  add_test.py  build.py  check.py  ci.py  completion.py  coverage.py  cp.py  devcontainer.py  docs.py  doctor.py  export_spec.py  format.py  info.py  init.py  lint_headers.py  ls.py  migrate.py  mv.py  newbench.py  newblock.py  newgroup.py  newmod.py  newparam.py  port.py  precommit.py  publish.py  rename.py  rename_block.py  rename_group.py  rm.py  run_test.py  sanitizers.py  search.py  show.py  status.py  sync.py  templates.py  tidy.py  validate.py  (+2 more)
gr4_modtool/project/: cmake.py  discovery.py  meson.py
gr4_modtool/templates/: Dockerfile.devcontainer.j2  Doxyfile.j2  bench_CMakeLists.txt.j2  bench_block.cpp.j2  block.hpp.j2  ci_clang.yml.j2  ci_coverage.yml.j2  ci_matrix.yml.j2  ci_release.yml.j2  ci_sanitizers.yml.j2  clang-format.j2  clang-tidy.j2  cmake_presets.json.j2  devcontainer.json.j2  flat_blocks_CMakeLists.txt.j2  flat_blocks_meson.build.j2  gitignore.j2  group_CMakeLists.txt.j2  group_meson.build.j2  plot_bench.py.j2  pre_commit_config.yaml.j2  qa_block.cpp.j2  test_CMakeLists.txt.j2  test_meson.build.j2  toplevel_CMakeLists.txt.j2  toplevel_meson.build.j2  vscode_launch.json.j2  vscode_settings.json.j2
gr4_modtool/tui/: app.py
tests/: conftest.py  test_add_dep.py  test_add_test.py  test_api.py  test_archetypes.py  test_bench_plot.py  test_check.py  test_ci_extra.py  test_ci_matrix.py  test_cmake.py  test_completion.py  test_coverage.py  test_cp.py  test_devcontainer.py  test_docs.py  test_doctor.py  test_export_spec.py  test_flat_project.py  test_format.py  test_git_init.py  test_info_verbose.py  test_init.py  test_json_output.py  test_lint_headers.py  test_ls.py  test_meson.py  test_migrate.py  test_mv.py  test_newbench.py  test_newblock.py  test_newblock_spec.py  test_newparam.py  test_plugins.py  test_port.py  test_precommit.py  test_publish.py  test_rename_block.py  test_rename_group.py  test_run_test.py  test_sanitizers.py  (+12 more)
tests/e2e/: conftest.py  test_block_editing.py  test_build_and_run.py  test_diagnostics.py  test_error_paths.py  test_export_spec_modes.py  test_flat_workflow.py  test_grouped_workflow.py  test_init_workflow.py  test_json_schema.py  test_multi_block_spec.py  test_mutation_workflow.py  test_newbench_workflow.py  test_newmod_workflow.py  test_port_workflow.py  test_quality_tooling.py  test_search_workflow.py  test_templates_workflow.py  test_tidy_workflow.py
