[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gr4_modtool"
version = "0.1.0"
description = "GNURadio 4 OOT module management tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "textual>=0.60",
    "jinja2>=3.1",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
gr4_modtool = "gr4_modtool.cli:cli"

[project.entry-points."gr4_modtool.commands"]
# Third-party packages register additional Click commands here

[project.entry-points."gr4_modtool.templates"]
# Third-party packages register additional template directories here

[tool.setuptools.packages.find]
where = ["."]
include = ["gr4_modtool*"]

[tool.setuptools.package-data]
gr4_modtool = ["templates/*.j2"]

[project.optional-dependencies]
dev = ["pytest>=7"]
